--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Machine learning Engineer, <br> <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
+            <h2>Diploma Research Assistant, <br> <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
             <h5><br><br>Graduate Studies: Master's in Communication and Multimedia Engineering (<a href="https://www.fau.eu/">FAU Erlangen Nuremberg</a>, Germany, class of 2020)
 		    <br><br><br>Undergraduate Studies: B.Tech in Electrical and Electronics Engineering (<a href="http://www.nitjsr.ac.in/">National Institute of Technology, Jamshedpur</a>, India, class of 2017) <br><br><br>Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
           </div>
@@ -152,20 +152,22 @@
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
-              <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Suppression</a></h4>
+              <h4 class="title"><a href="">Deep Learning Based Noise Suppression</a></h4>
               <p class="description" align='left'>In this project we present a novel deep learning method to suppress any kind of noises present in a speech signal. 
 		      The Deep learning model used for this project use a covulational recurrent neural network and the model was trained with 500 hours data provided by
-		      <a href="https://dns-challenge.azurewebsites.net/">Microsoft DNS challenge</a>. Visit the project page for more details and listen to the enhanced audio samples.</p>
+		      <a href="https://dns-challenge.azurewebsites.net/">Microsoft DNS challenge</a></p>
+<!-- 		     Visit the project page for more details and listen to the enhanced audio samples. -->
             </div>
           </div>
 	
 	<div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
-              <h4 class="title"><a href="https://shetu1994.github.io/AV-Speech/">An Empirical Study of Visual Features for Deep Learning based Audio-Visual Speech Enhancement</a></h4>
+              <h4 class="title"><a href="">An Empirical Study of Visual Features for Deep Learning based Audio-Visual Speech Enhancement</a></h4>
               <p class="description" align='left'>This project was the part of my master thesis work. In this project we reimplemented the AV speech separation model presented in <a href="https://looking-to-listen.github.io/"> Google Looking to Listen Project</a> . 
 		      Furthermore, we also proposed a raw lip images based AV speech enhancement model and compared the results with Google model. This project also covers a study of other visual features, such as, lip embedding and also the the effect of visual features on speech denoising tasks.
-		       Visit the project page for more details and listen to the enhanced audio-visual samples.</p>
+		       </p>
+<!-- 		    Visit the project page for more details and listen to the enhanced audio-visual samples -->
             </div>
           </div>
 		
