--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ talk detector usingMagnitude Squared Coherence(MSC) to extract the local speech 
 							  <li><a href="#projects"> Python </a></li>  
 							  <li><a href="#projects"> Matlab </a></li>
 							  <li><a href="#projects"> Java</a></li>
-							  <li><a href="#projects"> C</a></li>
+							  <li><a href="#projects"> C++</a></li>
 							  <li><a href="#projects"> HTML</a></li>
 							  <li><a href="#projects"> CSound</a></li>
 							</ul>
